top banner added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner flexible.container">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Jhankar Mahabub</span> World!</h1>
@@ -27,7 +27,7 @@
             <img src="images/jhankar-bg.png" alt="">
         </div>
     </section>
-    <section class="dream-big flexible.container">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
